# w3x2lni_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  external对齐审计报告.md  unpack_map.bat
app/: main.cpp
cli/: CMakeLists.txt  cli_app.cc  cli_app.h
cli/commands/: analyze_command.cc  analyze_command.h  command.h  config_command.cc  config_command.h  convert_command.cc  convert_command.h  extract_command.cc  extract_command.h  help_command.cc  help_command.h  lni_command.cc  lni_command.h  log_command.cc  log_command.h  map_input_utils.cc  map_input_utils.h  obj_command.cc  obj_command.h  pack_command.cc  pack_command.h  slk_command.cc  slk_command.h  template_command.cc  template_command.h  test_command.cc  test_command.h  unpack_command.cc  unpack_command.h  version_command.cc  version_command.h
converter/: CMakeLists.txt
converter/jass2lua/: jass_to_lua.cc  jass_to_lua.h  jass_tokenizer.cc  jass_tokenizer.h
converter/resource_extract/: resource_extractor.cc  resource_extractor.h
converter/w3x2lni/: w3x_to_lni.cc  w3x_to_lni.h
core/: CMakeLists.txt
core/config/: config_manager.cc  config_manager.h  runtime_paths.cc  runtime_paths.h
core/error/: error.cc  error.h
core/filesystem/: filesystem_utils.cc  filesystem_utils.h
core/logger/: logger.cc  logger.h
core/platform/: platform.cc  platform.h
data/: default_config.ini
gui/: CMakeLists.txt
gui/main_window/: main_window.cc  main_window.h
gui/panels/: panel.h
gui/panels/convert_panel/: convert_panel.cc  convert_panel.h
gui/panels/log_panel/: log_panel.cc  log_panel.h
gui/panels/map_panel/: map_panel.cc  map_panel.h
gui/panels/script_panel/: script_panel.cc  script_panel.h
gui/widgets/: file_dialog.cc  file_dialog.h
parser/: CMakeLists.txt
parser/jass/: jass_lexer.cc  jass_parser.cc  jass_parser.h  jass_types.h
parser/slk/: slk_parser.cc  slk_parser.h
parser/w3i/: w3i_parser.cc  w3i_parser.h
parser/w3u/: w3u_parser.cc  w3u_parser.h  w3u_writer.cc  w3u_writer.h
parser/w3x/: content_cleanup.cc  content_cleanup.h  map_archive_io.cc  map_archive_io.h  object_cleanup.cc  object_cleanup.h  object_pack_generator.cc  object_pack_generator.h  slk_pack_generator.cc  slk_pack_generator.h  txt_pack_generator.cc  txt_pack_generator.h  w3x_parser.cc  w3x_parser.h  workspace_layout.cc  workspace_layout.h  wts_file.cc  wts_file.h
tests/: CMakeLists.txt  smoke_tests.cc
